// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Recommended Actions Component renders correctly 1`] = `
<div
  className="Wrapper"
>
  <div
    className="Title"
  >
    <h6
      className="TitleText"
    >
      Recommendations
       – Dec 31 2017
    </h6>
  </div>
  <Action
    content="foo"
    key="0"
    link="http://google.com"
  />
  <Action
    content="bar"
    key="1"
    type="good"
  />
  <Action
    content="baz"
    key="2"
    type="warning"
  />
</div>
`;

exports[`Signals Recommended Actions Component renders correctly 2`] = `
<div
  className="ActionWrapper"
>
  <div
    className="Action"
  >
    <div
      className="IconBad"
    >
      <Warning
        size={25}
      />
    </div>
    <p>
      foo
       
      <ExternalLink
        className="Link"
        to="http://google.com"
      >
        Learn More
      </ExternalLink>
    </p>
  </div>
  <hr
    className="Dash"
  />
</div>
`;

exports[`Signals Recommended Actions Component renders correctly 3`] = `
<div
  className="ActionWrapper"
>
  <div
    className="Action"
  >
    <div
      className="IconGood"
    >
      <CheckCircleOutline
        size={25}
      />
    </div>
    <p>
      bar
       
    </p>
  </div>
  <hr
    className="Dash"
  />
</div>
`;

exports[`Signals Recommended Actions Component renders correctly 4`] = `
<div
  className="ActionWrapper"
>
  <div
    className="Action"
  >
    <div
      className="IconWarning"
    >
      <Warning
        size={25}
      />
    </div>
    <p>
      baz
       
    </p>
  </div>
  <hr
    className="Dash"
  />
</div>
`;

exports[`Signals Recommended Actions Component renders empty state when empty 1`] = `
<div
  className="Wrapper"
>
  <div
    className="Title"
  >
    <h6
      className="TitleText"
    >
      Recommendations
       – Dec 31 2017
    </h6>
  </div>
  <Callout
    height="100px"
  >
    No actions to display at this time.
  </Callout>
</div>
`;
